<resources>
    <string name="app_name">Billant</string>
    <string name="nav_header_subtitle">Main menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- IMPORT FROM ANOTHER APPS -->
    <string name="info">Info</string>
    <string name="item_info_title" translatable="false">[Section Item Info]</string>
    <string name="pos_in_section" translatable="false">Position in section:</string>
    <string name="pos_in_adapter" translatable="false">Position in adapter:</string>
    <string name="view_type" translatable="false">View type:</string>
    <string name="has_header" translatable="false">Has header?</string>
    <string name="has_footer" translatable="false">Has footer?</string>
    <string name="header_pos" translatable="false">"Header position:</string>
    <string name="footer_pos" translatable="false">"Footer position:</string>
    <string name="section_info_title" translatable="false">[Section Info]</string>
    <string name="close">Close</string>
    <!-- IMPORT FROM ANOTHER APPS -->


    <string name="menu_home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="currency">Currency</string>
    <string name="reminder">Reminder</string>
    <string name="analytics">Analytics</string>
    <string name="contacts">Contacts</string>
    <string name="spendings">Spendings</string>
    <string name="assets">Assets</string>
    <string name="subscribe">Subscribe</string>
    <string name="about">About</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="version_history" translatable="false">
Version history:\n
— 1.0.1 —\n
1. Fixed bugs\n\n
— 1.1 —\n
1. Supporting Android 14\n\n
    </string>
    <string name="disclaimer">DISCLAIMER: Softgasm makes no warranty and expressly disclaims all warranties as to the accuracy or reliability or suitability of any calculation results or information provided through its products. Softgasm is not also responsible for any damages, direct or indirect, which may occur by the calculation results or information provided through the products.</string>
    <string name="iconby">Icons by:</string>
    <string name="dari">Developed by:</string>
    <string name="firstdateinfo">Created since: 5th June 2023</string>
    <string name="decisionassistance">Decision Assistance</string>
    <string name="simulator">Simulator</string>


    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="buysubs">Buy Subscription</string>
    <string name="buysubsdesc">By subscribing to our premium plan, you will get:\n✔ Ad-free surfing\n✔ More angle units\n✔ Find three dimensional vector\n✔ Labels on every array value\n✔ Supporting the developer</string>
    <string name="selectplan">Select the plan:</string>
    <string name="month1">Month</string>
    <string name="months">Months</string>
    <string name="selecttheoption">Select the option</string>
    <string name="watchads">Watch Ads</string>
    <string name="enterwithoutads">Enter Without Ads</string>
    <string name="adsisnotloaded">Ads is not loaded, please wait and try again</string>
    <string name="labels">Labels</string>
    <string name="ialreadypurchased">I already purchased</string>
    <string name="purchased">Purchased</string>
    <string name="notpurchased">not purchased</string>
    <string name="status">Status</string>
    <string name="loadingad">Loading Ads</string>
    <string name="tryagain">Try Again</string>
    <string name="inserthere">Insert here</string>
    <string name="pleasewait">Please Wait</string>
    <string name="unitprice">Unit Price</string>
    <string name="tip">Tip</string>
    <string name="savings">Savings</string>
    <string name="salestax">Sales Tax</string>
    <string name="odds">Odds</string>
    <string name="loans">Loans</string>
    <string name="interest">Interest</string>
    <string name="adscalculations">Ads Calculations</string>
    <string name="calculations">Calculations</string>
    <string name="stocks">Stocks</string>
    <string name="employees">Employees</string>
    <string name="commons">Commons</string>
    <string name="loan">Loan</string>
    <string name="sales">Sales</string>
    <string name="financialplanning">Financial Planning</string>
    <string name="others">Others</string>
    <string name="consumptiontax">Consumption Tax</string>
    <string name="add">Add</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="statistics">Statistics</string>
    <string name="financialmanagement">Financial Management</string>
    <string name="businessmanagement">Business Management</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name">Name</string>
    <string name="inputhere">Input here</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="functions">Functions</string>
    <string name="cancel">Cancel</string>
    <string name="alltransactions">All Transactions</string>
    <string name="comparison">Comparison</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="category_optional">Category (optional)</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="successful">Successful</string>
    <string name="custom">Custom</string>
    <string name="transactions">Transactions</string>
    <string name="year">Year</string>
    <string name="items_colon">Items: </string>
    <string name="week">Week</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="opensourcelicenses">Open Source Licenses</string>
    <string name="contactus">Contact Us</string>
    <string name="versionhistory">Version History</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="followus">Follow Us:</string>
    <string name="summary">Summary</string>
</resources>