<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/select_tab_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/select_month_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/select_year_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_transactions_recyclerview"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/select_transactions_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>