<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".subscribe">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/buysubs"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/buysubsdesc" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectplan"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/onemonthplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_gravity="top">

                    <TextView
                        style="@style/blackandwhitetext"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1"
                        android:textSize="35sp" />

                </FrameLayout>

                <TextView
                    style="@style/blackandwhitetext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/month1"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="0.5sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/onemonthprice"
                    style="@style/blackandwhitetext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="0.5sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/sixmonthplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/onemonthplan"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="4dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_gravity="top">

                    <TextView
                        style="@style/blackandwhitetext"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="6"
                        android:textSize="35sp" />
                </FrameLayout>

                <TextView
                    style="@style/blackandwhitetext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/months"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="0.5sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/sixmonthsoriginalprice"
                    style="@style/blackandwhitetext"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="0.5sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/sixmonthsprice"
                    style="@style/blackandwhitetext"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="0.5sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <Button
        android:id="@+id/iapbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/ialreadypurchased"/>

    <TextView
        android:id="@+id/tv_sub_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

</LinearLayout>