<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/transaction_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/transaction_bottomnavigationview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactions_calendar_linearlayout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/homefloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toTopOf="@+id/transaction_bottomnavigationview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription=""
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/homefloat"
        app:layout_constraintEnd_toEndOf="@+id/homefloat"
        app:srcCompat="@drawable/baseline_123_24" />

    <TextView
        android:id="@+id/home_income_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/income"
        app:layout_constraintBottom_toBottomOf="@+id/fab_home_income"
        app:layout_constraintEnd_toStartOf="@+id/fab_home_income"
        app:layout_constraintTop_toTopOf="@+id/fab_home_income" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription=""
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/fab_home_income"
        app:layout_constraintEnd_toEndOf="@+id/fab_home_income"
        app:layout_constraintStart_toStartOf="@+id/fab_home_income"
        app:srcCompat="@drawable/baseline_123_24" />


    <TextView
        android:id="@+id/home_expense_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/expense"
        app:layout_constraintBottom_toBottomOf="@+id/fab_home_expense"
        app:layout_constraintEnd_toStartOf="@+id/fab_home_expense"
        app:layout_constraintTop_toTopOf="@+id/fab_home_expense" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/transaction_bottomnavigationview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/transactions_bottom_bar" />

    <LinearLayout
        android:id="@+id/transactions_calendar_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/transaction_calendar_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:text="◀" />

        <Button
            android:id="@+id/transaction_calendar_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="March\n2023" />

        <Button
            android:id="@+id/transaction_calendar_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:text="▶" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>